# ZeroBin

./: EULA.txt  LICENSE  LICENSE.rtf  README.md  archive.7z  package-lock.json  package.json  tailwind.config.js  updater.json
knowledge/: browsers.json  communication.json  creative.json  development.json  gaming.json  windows.json
rules/: apps.json  files.json
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  updater.key  updater.key.pub
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  knowledge.rs  lib.rs  main.rs  scanner.rs
